# afoolsbag.github.io

./: .editorconfig  .gitignore  .justfile  404.html  Pipfile  README.md  index.html  mkdocs-build.cmd  mkdocs-gh-deploy.cmd  mkdocs-local-serve.cmd  mkdocs-remote-serve.cmd  mkdocs-serve.cmd  mkdocs.yml  pip-upgrade-mkdocs.cmd  pip-upgrade-packages.cmd  pyproject.toml  robots.txt  scoop-cache-rm.cmd  scoop-cleanup.cmd  scoop-env.cmd  scoop-envinit.cmd  scoop-update.cmd  sitemap.xml  tasks.py
AV/AV/: index.html
AV/Audacity/: index.html
AV/Blender/: index.html
AV/FFmpeg/: index.html
AV/GIMP/: index.html
AV/GPT-2/: index.html
AV/VLC/: index.html
App/: index.html
App/3DCG/: index.html
App/Audio/: index.html
App/Document/: index.html
App/GPT-2/: index.html
App/Image/: index.html
App/P2PECS/: index.html
App/Text/: index.html
App/Video/: index.html
App/YOLO/: index.html
CC/: index.html
CC/CC/: index.html
CC/Crypt/: index.html
CC/Emacs/: index.html
CC/IntCen/: index.html
CC/Markdown/: index.html
CC/MkDocs/: index.html
CC/StarUML/: index.html
Cheat Engine/: index.html
DevOps/: index.html
GFW/: index.html
MM/: index.html
Mid/: index.html
OS/: index.html
OpSys/: index.html
P2PECS/: index.html
Remote/: index.html
StarUML/: index.html
VLC Media Player/: index.html
VMware/: index.html
Vim/: index.html
VirtualBox/: index.html
Xshell/: index.html
docs/: GFW.md  P2PECS.md  index.md
docs/AV/: AV.md  (+4 more)
fqres/: index.html
includes/: abbreviations.md  links.md
search/: search_index.json
switch/: index.html
(+326 files in other folders)
